<resources>
    <string name="app_name">Weather</string>
    <string name="accept">ok</string>
    <string name="greeting">Hello!</string>
    <string name="name">Name</string>
    <string name="string_hint1">Type here</string>
    <string name="hello">ПРИВЕТ ВСЕМ</string>
    <string name="button">button</string>
    <string name="world">Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World Hello World</string>
    <string name="content_kotlin">kotlin logo</string>
    <string name="buttonActivity">Next Page</string>
    <string name="buttonBack">Home Page</string>
    <string name="butt">OK</string>
    <string name="butt4">Next page</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>
    <string name="button9">button9</string>
    <string name="button10">button10</string>
    <string name="button11">button11</string>
    <string name="button12">button12</string>
    <string name="butConst">Button</string>
    <string name="TextView">TextView</string>
    <string name="Activity2">Activity2</string>
    <string name="Activity3">Activity3</string>
    <string name="editT">Type here</string>
    />
</resources>