<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <!-- ДЗ к 21 уроку-->
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="25sp"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="413dp"
        android:backgroundTint="#E91E63"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="211dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="409dp"
        android:backgroundTint="#E91E63"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- примеры из 24 урока-->

    <Button
        android:id="@+id/button4"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="50dp"
        android:text="@string/buttonActivity"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="405dp"
        android:layout_height="710dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/accept"
            android:textColor="@color/teal_200"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/string_hint1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/name" />
        <!-- примеры из 23 урока -->
        <TextView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/design_default_color_primary_dark"
            android:text="@string/world"
            android:visibility="visible" />

        <TextView
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/teal_200"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/world"
            android:visibility="visible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


